# SpaceShip_Command

./: CMakeLists.txt
.github/workflows/: releasy.yml
include/: Point.h  SpaceShip.h
include/Commands/: BurnFuelCommand.h  ChangeVelocityCommand.h  CheckFuelCommand.h  MacroCommand.h  MoveCommand.h  RotateCommand.h
include/Interfaces/: IBurnFuelObject.h  ICommand.h  IFuelObject.h  IMovingObject.h  IRotatingObject.h
src/: Point.cpp  SpaceShip.cpp  main.cpp
src/Commands/: BurnFuelCommand.cpp  ChangeVelocityCommand.cpp  CheckFuelCommand.cpp  MacroCommand.cpp  MoveCommand.cpp  RotateCommand.cpp
tests/: test_main.cpp
